--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -12,9 +12,12 @@ node {
      }
    }
    stage('docker build/push') {
-     tool name: 'docker', type: 'dockerTool'
-     docker.withRegistry('https://index.docker.io/v2/', 'docker-devmhp') {
-       def app = docker.build("wardviaene/docker-nodejs-demo:${commit_id}", '.').push()
+     docker.withTool('docker') {
+        withDockerServer([credentialsId: "ubdockera1", uri: "tcp://ubdockera1.mhp.lan:2376"]) { 
+           docker.withRegistry('https://index.docker.io/v2/', 'docker-devmhp') {
+             def app = docker.build("wardviaene/docker-nodejs-demo:${commit_id}", '.').push()
+           }
+        }
      }
    }
 }
